test/spec_vectors/load64/fail/module_25.wat
(module (memory i64 1) (func $load32_u_i64 (i64.load32_u (i64.const 0))))